WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277826
Viewport fails to shrink down to normal height when opening account settings UI on google.com
https://bugs.webkit.org/show_bug.cgi?id=277826
Summary
Viewport fails to shrink down to normal height when opening account settings ...
Wenson Hsieh
Reported
2024-08-08 13:52:05 PDT
rdar://133488609
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-08-08 14:05:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31914
EWS
Comment 2
2024-08-08 15:50:14 PDT
Committed
282015@main
(7eb3b2d4084c): <
https://commits.webkit.org/282015@main
> Reviewed commits have been landed. Closing PR #31914 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug