Viewport fails to shrink down to normal height when opening account settings UI on google.com https://bugs.webkit.org/show_bug.cgi?id=277826 rdar://133488609

Reviewed by Aditya Keerthi.

Make a couple more adjustments to the dynamic viewport height expansion heuristic:

1.  Only compare the height of the fixed-position container against the fixed-position layout rect,
    instead of the area of the rects. This allows the viewport to shrink in cases where there's a
    tall fixed-position popup that's intended to cover the full height of the viewport, but doesn't
    take up the entire width of the viewport.

2.  Once one or more large fixed-position popups are found, check if any of the nodes surfaced via
    area-based hit-test are contained within any of the popups, rather than trying to check whether
    any one of the hit-tested nodes is (itself) a large fixed-position popup. This prevents a false
    negative in the case where a large fixed-position element contains a child element that covers
    the entire fixed element.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::updateLayoutViewportHeightExpansionTimerFired):

Canonical link: https://commits.webkit.org/282015@main